Add resources folder, path building base off from NODE_ENV environment variable

--- a/src/index/react/App.css
+++ b/src/index/react/App.css
@@ -24,6 +24,7 @@
     overflow-x: auto;
     display: flex;
     flex-direction: column;
+    box-shadow: 1px 1px 3px rgb(26, 26, 26);
 }
 
 .page h1,
